# recipes-db

./: Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_recipes_and_ingredients.py  002_create_vec_embeddings.py  003_add_recipe_user_fields.py  004_add_tried_on_date.py
docs/development/: bbc_good_food_selectors.md
docs/known-issues/: known-issues.md
docs/plans/: daily-sync-cli.md
scripts/: embed.py  scrape.py  search.py  sync.py
src/config/: settings.py
src/db/: engine.py  models.py  vec.py
src/embeddings/: voyage.py
src/scraper/: browser.py  parsers.py  scrape.py  sitemap.py
src/search/: query.py
tests/: conftest.py  test_models.py  test_parsers.py  test_search.py  test_vec.py
tests/e2e/: test_scrape_live.py
