[project]
name = "recipes-ai"
version = "0.1.0"
description = "BBC Good Food recipe scraper and semantic search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "sqlite-vec>=0.1.7a10",
    "pydantic-settings>=2.7.0",
    "voyageai>=0.3.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests against live site"]
addopts = "-m 'not e2e'"

[tool.uv.sources]
sqlite-vec = { index = "pypi" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
